--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -1,3 +1,43 @@
+@font-face {
+  font-family: "iconfont";
+
+  src: url('../fonts/iconfont.eot?t=1481869552289');
+  /* IE9*/
+  src: url('../fonts/iconfont.eot?t=1481869552289#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/iconfont.woff?t=1481869552289') format('woff'), /* chrome, firefox */ url('../fonts/iconfont.ttf?t=1481869552289') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('../fonts/iconfont.svg?t=1481869552289#iconfont') format('svg');
+  /* iOS 4.1- */
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-share1:before {
+  content: "\e64e";
+}
+.icon-icon:before {
+  content: "\e601";
+}
+.icon-clock:before {
+  content: "\e600";
+}
+.icon-tuichu:before {
+  content: "\e602";
+}
+.icon-user:before {
+  content: "\e618";
+}
+.icon-shezhi:before {
+  content: "\e680";
+}
+.icon-touxiang:before {
+  content: "\e614";
+}
+.icon-suo:before {
+  content: "\e616";
+}
 .navbar {
   position: relative;
   -webkit-transition: all .3s linear;
@@ -10,14 +50,16 @@
 .navbar .container-fluid {
   padding: 0 40px;
 }
-.navbar .navbar-right a {
-  position: relative;
-  padding: 24px 15px;
+.navbar .navbar-right li {
+  padding: 15px 0;
 }
-.navbar .navbar-right a i {
+.navbar .navbar-right li a {
+  position: relative;
+}
+.navbar .navbar-right li a i {
   font-size: 16px;
 }
-.navbar .navbar-right a span {
+.navbar .navbar-right li a span {
   position: absolute;
   top: 35%;
   right: 6px;
@@ -153,7 +195,7 @@
   color: rgba(255, 255, 255, .5);
 }
 .container .index-ad {
-  margin-top: 10px;
+  margin-top: 30px;
 }
 .container .index-ad img {
   width: 100%;
@@ -272,6 +314,9 @@ footer {
 }
 footer .col-sm-3 {
   padding: 0 40px;
+}
+footer .col-sm-3 a {
+  color: rgba(255, 255, 255, .8);
 }
 @media (max-width: 768px) {
   footer .col-sm-3 {
@@ -455,5 +500,467 @@ footer .copyright .cpr {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+.trial-text {
+  position: relative;
+  display: inline-block;
+  padding: 15px 0 0 20px;
+  margin-left: 20px;
+  font-weight: normal;
+  color: #fff;
+}
+.trial-text:after,
+.trial-text:before {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 1px;
+  height: 30px;
+  content: "";
+}
+.trial-text:after {
+  left: -1px;
+  background: #60b428;
+}
+.trial-text:before {
+  background: #76dc32;
+}
+.trial_wrap {
+  width: 600px;
+  margin: 50px auto;
+}
+.trial_wrap .panel {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.trial_wrap .panel .panel-body {
+  padding: 10px 30px;
+}
+.trial_wrap .panel .panel-body .checkbox {
+  margin: 10px 0;
+}
+.trial_wrap button {
+  margin-top: 30px;
+}
+.trial_wrap h4 {
+  margin-bottom: 40px;
+  font-size: 24px;
+  color: #69c72b;
+  text-align: center;
+}
+.trial_wrap .input-group {
+  position: relative;
+  margin-top: 20px;
+}
+.trial_wrap .input-group input {
+  height: 42px;
+  padding: 6px 50px 6px 15px;
+}
+.trial_wrap .input-group .tip {
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  z-index: 10;
+  color: #ff8400;
+}
+.trial_wrap .input-group p {
+  position: absolute;
+  left: 100%;
+  display: inherit;
+  margin-left: 10px;
+  line-height: 40px;
+}
+.user-center {
+  margin-bottom: 30px;
+}
+.user-center .user-left {
+  float: left;
+  width: 240px;
+  margin-right: 20px;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+}
+.user-center .user-left .user-header {
+  padding: 30px;
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.user-center .user-left .user-header img {
+  width: 130px;
+  margin-bottom: 5px;
+  border-radius: 50%;
+}
+.user-center .user-left .user-header h4 {
+  margin: 10px 0 15px 0;
+  color: #999;
+}
+.user-center .user-left .user-header .user-time {
+  height: 26px;
+  margin: 0 10px;
+  overflow: hidden;
+  border: 1px solid #69c72b;
+}
+.user-center .user-left .user-header .user-time i {
+  display: inline-block;
+  float: left;
+  height: 26px;
+  padding: 1px 6px;
+  color: #fff;
+  background: #69c72b;
+}
+.user-center .user-left .user-header .user-time span {
+  display: inline-block;
+  height: 26px;
+  padding: 3px 10px;
+  color: #999;
+}
+.user-center .user-left .user-left-menu {
+  padding: 0;
+  margin: 10px 0 0 0;
+  font-size: 16px;
+}
+.user-center .user-left .user-left-menu li a {
+  color: #777;
+}
+.user-center .user-left .user-left-menu li a:hover {
+  background: #f4f9f3;
+}
+.user-center .user-left .user-left-menu li.active {
+  background: #f4f9f3;
+  border-top: 1px solid #e5e5e5;
+  border-right: 3px solid #69c72b;
+  border-bottom: 1px solid #e5e5e5;
+}
+.user-center .user-left .user-left-menu li.active a {
+  color: #69c72b;
+}
+.user-center .user-left .user-left-menu > li {
+  list-style-type: none;
+}
+.user-center .user-left .user-left-menu > li.open a span {
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+       -o-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+.user-center .user-left .user-left-menu > li > a {
+  display: block;
+  padding: 10px 20px;
+}
+.user-center .user-left .user-left-menu > li > a > i {
+  margin-right: 10px;
+}
+.user-center .user-left .user-left-menu > li > a > span {
+  float: right;
+  font-size: 20px;
+  -webkit-transition: all .3s ease;
+       -o-transition: all .3s ease;
+          transition: all .3s ease;
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+       -o-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+.user-center .user-left .user-left-menu > li > ul {
+  padding: 0;
+  margin: 0;
+}
+.user-center .user-left .user-left-menu > li > ul > li {
+  list-style-type: none;
+}
+.user-center .user-left .user-left-menu > li > ul > li > a {
+  display: block;
+  padding: 10px 45px;
+  font-size: 14px;
+}
+.user-center .user-right {
+  overflow: hidden;
+  background: #fff;
+}
+.user-center .user-right > h5 {
+  padding: 10px 30px;
+}
+.user-center .user-right .form-horizontal {
+  padding: 20px 30px;
+}
+.user-center .user-right .form-horizontal .form-group .control-label {
+  text-align: left;
+}
+.user-center .user-right .form-horizontal .form-group .radio {
+  margin-top: 6px;
+}
+.user-center .user-right .tree-header {
+  padding: 10px 15px;
+  color: #fff;
+  background: #69c72b;
+}
+.user-center .user-right .tree-menu {
+  padding: 20px;
+}
+.user-center .user-right .tree-menu .treeview {
+  float: left;
+  width: 50%;
+  max-height: 300px;
+  overflow-y: scroll;
+}
+.user-center .user-right .tree-menu .tree-result {
+  float: left;
+  width: 50%;
+  padding: 50px 30px 0 50px;
+}
+.user-center .user-right .tree-menu .tree-result .col-xs-6 {
+  border-right: 1px solid #eee;
+}
+.user-center .user-right .tree-menu .tree-result .col-xs-6 p {
+  margin-top: 15px;
+  text-align: center;
+}
+.user-center .user-right .tree-menu .tree-result .col-xs-6 h4 {
+  text-align: center;
+}
+.user-center .user-right .log-search {
+  padding: 10px;
+}
+.user-center .user-right .log-search .input-group {
+  border-bottom: 1px solid #eee;
+}
+.user-center .user-right .log-search .input-group input {
+  padding: 5px 0 0 0;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.user-center .user-right .log-search .input-group input:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.user-center .user-right .log-search .input-group span a {
+  font-size: 18px;
+  color: #bdc2c7;
+}
+.user-center .user-right .log-search .input-group span a:hover {
+  color: #69c72b;
+}
+.user-center .user-right .log-search .input-group span a:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.user-center .permiss-table {
+  padding: 20px;
+}
+.user-center .permiss-table .toolbar {
+  float: left;
+}
+.user-center .manage tbody tr td img {
+  height: 40px;
+}
+.user-center .manage tbody tr td a {
+  padding: 0 5px;
+  font-size: 16px;
+  color: #97a3b1;
+}
+.user-center .manage tbody tr td a .fa-lock {
+  color: #ff8400;
+}
+.user-center .tab-user {
+  float: left;
+}
+.user-center .tab-user li {
+  float: left;
+}
+.user-center .tab-user li.active a {
+  color: #69c72b;
+  border-bottom: 3px solid #69c72b;
+}
+.user-center .tab-user li a {
+  padding: 15px 20px;
+  color: #333;
+  border-bottom: 3px solid transparent;
+}
+.user-center .tab-user li a:hover,
+.user-center .tab-user li a:focus {
+  background: #fff;
+}
+.user-center .user-search {
+  float: right;
+  width: 300px;
+  margin-top: 5px;
+}
+.user-center .user-search .input-group {
+  border-bottom: 1px solid #eee;
+}
+.user-center .user-search .input-group input {
+  padding: 5px 0 0 0;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.user-center .user-search .input-group input:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.user-center .user-search .input-group span a {
+  font-size: 18px;
+  color: #bdc2c7;
+}
+.user-center .user-search .input-group span a:hover {
+  color: #69c72b;
+}
+.user-center .user-search .input-group span a:active {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.user-center .user-add {
+  float: right;
+  margin-left: 20px;
+}
+.user-center .user-add .btn {
+  padding: 16px 20px;
+  border: none;
+  border-radius: 0;
+}
+.set-list .input-group {
+  margin: 10px 0 20px 0;
+}
+.set-list .set-list-header {
+  padding: 8px 0;
+  margin: 0 0 10px 0;
+  color: #fff;
+  text-align: center;
+  background: #97a3b1;
+}
+.set-list .set-list-header div:first-child {
+  text-align: left;
+}
+.set-list .radio-scroll {
+  max-height: 300px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.set-list .radio-scroll .list-radio:hover {
+  background: #f5f5f5;
+}
+.set-list .radio-scroll .list-radio ul {
+  padding: 0;
+  margin: 0;
+}
+.set-list .radio-scroll .list-radio ul li {
+  margin: 5px 0;
+  line-height: 28px;
+  text-align: center;
+  list-style-type: none;
+}
+.set-list .radio-scroll .list-radio ul li:first-child {
+  text-align: left;
+}
+.set-list .radio-scroll .list-radio ul li .radio {
+  display: inline-block;
+  margin: 5px 0 0 0;
+}
+.set-list .radio-scroll .list-radio .list-radio-main ul li:first-child {
+  padding-left: 28px;
+}
+.set-list .radio-scroll .list-radio .list-radio-main ul li span {
+  cursor: pointer;
+}
+.report {
+  position: relative;
+}
+.report .report-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 240px;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background: #eee;
+  border-right: 1px solid #e5e5e5;
+  -webkit-transition: all .3s ease;
+       -o-transition: all .3s ease;
+          transition: all .3s ease;
+}
+.report .report-menu > h4 {
+  padding: 24px 0;
+  margin: 0;
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.report .report-menu.toggle {
+  left: -240px;
+}
+.report .report-menu > ul {
+  padding: 0;
+  margin: 0;
+}
+.report .report-menu > ul > li {
+  list-style-type: none;
+}
+.report .report-menu > ul > li.open a i {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+       -o-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+.report .report-menu > ul > li > a {
+  display: block;
+  padding: 10px 15px;
+  color: #333;
+  border-bottom: 1px solid #e5e5e5;
+}
+.report .report-menu > ul > li > a > i {
+  float: right;
+  font-size: 22px;
+  line-height: 22px;
+  color: #aaa;
+  -webkit-transition: all .3s ease;
+       -o-transition: all .3s ease;
+          transition: all .3s ease;
+}
+.report .report-menu > ul > li > ul {
+  padding: 0;
+  margin: 0;
+  background: #f5f5f5;
+}
+.report .report-menu > ul > li > ul > li {
+  list-style-type: none;
+  border-bottom: 1px solid #e5e5e5;
+}
+.report .report-menu > ul > li > ul > li > a {
+  display: block;
+  padding: 10px 15px 10px 35px;
+  color: #777;
+}
+.report .report-menu > ul > li > ul > li > a:hover {
+  background: #eee;
+}
+.report .report-wrapper {
+  padding: 0 30px;
+  margin-left: 240px;
+  overflow: hidden;
+  -webkit-transition: all .3s ease;
+       -o-transition: all .3s ease;
+          transition: all .3s ease;
+}
+.report .report-wrapper.full {
+  margin-left: 0;
+}
+.report .report-wrapper .iframe-content {
+  margin-top: 20px;
+}
+.full-screen {
+  position: fixed;
+  top: 90px;
+  left: 0;
+  width: 26px;
+  height: 24px;
+  padding: 0 3px 0 0;
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+  background: #69c72b;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 /*# sourceMappingURL=docs.css.map */
