--- a/public/css/wechat.css
+++ b/public/css/wechat.css
@@ -3,7 +3,7 @@
 }
 
 .impowerBox .title {
-    display: none;
+    /*display: none;*/
 }
 
 .impowerBox .info {
@@ -11,7 +11,7 @@
 }
 
 .status_icon {
-    display: none;
+    /*display: none;*/
 }
 
 .impowerBox .status {
