--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont";
 
-  src: url('../fonts/iconfont.eot?t=1481869552289');
+  src: url('../fonts/iconfont.eot?t=1482918154466');
   /* IE9*/
-  src: url('../fonts/iconfont.eot?t=1481869552289#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/iconfont.woff?t=1481869552289') format('woff'), /* chrome, firefox */ url('../fonts/iconfont.ttf?t=1481869552289') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('../fonts/iconfont.svg?t=1481869552289#iconfont') format('svg');
+  src: url('../fonts/iconfont.eot?t=1482918154466#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/iconfont.woff?t=1482918154466') format('woff'), /* chrome, firefox */ url('../fonts/iconfont.ttf?t=1482918154466') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('../fonts/iconfont.svg?t=1482918154466#iconfont') format('svg');
   /* iOS 4.1- */
 }
 .iconfont {
@@ -37,6 +37,18 @@
 }
 .icon-suo:before {
   content: "\e616";
+}
+.icon-MUTmeijieban:before {
+  content: "\e635";
+}
+.icon-iKolTracker:before {
+  content: "\e636";
+}
+.icon-mVideoTracker:before {
+  content: "\e637";
+}
+.icon-iResearchData:before {
+  content: "\e638";
 }
 .navbar {
   position: relative;
@@ -145,6 +157,7 @@
   display: block;
   padding: 11px 15px;
   color: #fff;
+  cursor: default;
 }
 .navbar .nav-bg .tab-menu > li a i {
   position: relative;
@@ -201,7 +214,7 @@
   width: 100%;
 }
 .container .focus-main {
-  margin-top: 20px;
+  margin: 30px 0;
 }
 .container .focus-main .focus-main-right {
   float: right;
@@ -241,14 +254,15 @@
 }
 .container .focus-main .focus-main-right ul li a {
   display: block;
-  padding: 30px 0;
+  padding: 55px 0;
   color: #8c9bb1;
   text-align: center;
   border-bottom: 1px dashed #e8edf1;
 }
 .container .focus-main .focus-main-right ul li a i {
-  margin-bottom: 10px;
+  overflow: hidden;
   font-size: 42px;
+  line-height: 42px;
 }
 .container .focus-main .focus-main-right ul li a p {
   margin: 0;
@@ -331,7 +345,6 @@ footer .col-sm-3 h3 {
   border-bottom: 1px solid #69c72b;
 }
 footer .copyright {
-  margin-top: 40px;
   text-align: center;
 }
 footer .copyright span {
@@ -873,7 +886,7 @@ footer .copyright .cpr {
   width: 240px;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   background: #eee;
   border-right: 1px solid #e5e5e5;
   -webkit-transition: all .3s ease;
@@ -962,5 +975,33 @@ footer .copyright .cpr {
   background: #69c72b;
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
+}
+.history .modal-header {
+  padding: 10px 15px 30px 40px;
+  background: #69c72b url("../../public/img/background.png") no-repeat;
+  -webkit-background-size: cover;
+          background-size: cover;
+}
+.history .modal-header h4 {
+  text-align: center;
+}
+.history .modal-header h4 img {
+  width: 300px;
+  margin: 30px 0 0 35px;
+}
+.history .modal-header button.close {
+  color: #fff;
+  opacity: .7;
+}
+.history .modal-header button.close:hover {
+  opacity: 1;
+}
+.history .modal-body form {
+  padding: 30px 140px;
+}
+.history .modal-body > p {
+  margin-top: 50px;
+  color: #999;
+  text-align: center;
 }
 /*# sourceMappingURL=docs.css.map */
