--- a/public/css/wechat.css
+++ b/public/css/wechat.css
@@ -1,5 +1,10 @@
+body {
+    font-family: PingFangSC-Light, HanHei SC, Helvetica Neue, Helvetica, STHeitiSC-Light, Arial, Microsoft YaHei, sans-serif;
+}
+
 .impowerBox .qrcode {
     width: 170px;
+    margin-top: 40px;
 }
 
 .impowerBox .title {
