--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -6,6 +6,24 @@
   src: url('../fonts/iconfont.eot?t=1482918154466#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/iconfont.woff?t=1482918154466') format('woff'), /* chrome, firefox */ url('../fonts/iconfont.ttf?t=1482918154466') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('../fonts/iconfont.svg?t=1482918154466#iconfont') format('svg');
   /* iOS 4.1- */
 }
+@font-face {
+  font-family: "pepsi";
+
+  src: url('../fonts/pepsi-pl.eot?t=1478164631522');
+  /* IE9*/
+  src: url('../fonts/pepsi-pl.eot?t=1478164631522#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../fonts/pepsi-pl.woff?t=1478164631522') format('woff'), /* chrome, firefox */ url('../fonts/pepsi-pl.ttf?t=1478164631522') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/ url('../fonts/pepsi-pl.svg?t=1478164631522#iconfont') format('svg');
+  /* iOS 4.1- */
+}
+.pepsi {
+  font-family: "pepsi" !important;
+  font-size: 14px;
+  font-style: normal;
+  letter-spacing: 1px;
+
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: .2px;
+  -moz-osx-font-smoothing: grayscale;
+}
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 16px;
@@ -393,13 +411,13 @@
 }
 .product-content .product-content-header .product-title h3 {
   margin: 0;
-  font-size: 20px;
+  font-size: 18px;
   letter-spacing: 2px;
 }
 .product-content .product-content-header .product-title h4 {
-  margin: 0;
-  font-size: 16px;
-  letter-spacing: 1px;
+  margin: 5px 0 0 0;
+  font-size: 14px;
+  letter-spacing: 2px;
 }
 .product-content .product-content-header .product-title span {
   position: absolute;
