--- a/public/css/xvt/index.css
+++ b/public/css/xvt/index.css
@@ -321,7 +321,7 @@ body {
   color: #999;
   font-weight: bold;
   font-size: 14px;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .pc .item-tab .item-tab-content p {
