--- a/public/css/xvt/header.css
+++ b/public/css/xvt/header.css
@@ -1,6 +1,6 @@
-@charset "gb2312";
+
 /* CSS Document */
-html { height:100%; font-size:100px;}
+html { height:100%; font-size:100px; overflow-x: hidden;}
 body { font-family: "Microsoft YaHei","Helvetica Neue", Helvetica, "Microsoft Yahei UI", Arial, SimHei, "\5B8B\4F53", simsun, sans-serif;color: #333; position:relative; background-color:#f7f7f7; font-size:14px;}
 em,i { font-style:normal;}
 ul,ol,li { list-style:none; margin:0; padding:0;}
@@ -28,7 +28,7 @@ select::-ms-expand { display: none; }
   transition:background 300ms ease;
 }
 
-/*点击触感效果*/
+
 .rippleria-ink{display:block;position:absolute;background:rgba(255,255,255,.2);border-radius:100%;-webkit-transform:scale(0);transform:scale(0);z-index:2}.rippleria-dark .rippleria-ink{background:rgba(0,0,0,.2)}.rippleria-wrap{position:relative;z-index:0}.rippleria-blured .rippleria-ink{-webkit-filter:blur(5px);filter:blur(5px)}@keyframes rippleria{100%{opacity:0;transform:scale(2.5)}}@-webkit-keyframes rippleria{100%{opacity:0;-webkit-transform:scale(2.5)}}
 
 .navbar-collapse { padding-left:0; padding-right:0;}
@@ -190,7 +190,12 @@ html,body { height:100%;}
 .btn.disabled { color:#888 !important; border-color:#888 !important; background-color:transparent !important;}
 
 
+@media (min-width:769px) and (max-width:970px ){
 
+  .navbar-nav { margin-left: 20px;}
+  .navbar-nav > li { margin-right: 10px;}
+  .nav .dropdown-menu > li { padding-right: 50px!important; width: 202px;}
+}
 
 @media (min-width:768px){
 
@@ -227,8 +232,8 @@ html,body { height:100%;}
     -webkit-transform:scale(1,1);
     transform:scale(1,1);
   }
-  .nav .dropdown-menu { position:relative; max-width:1100px; margin:auto; display:block; left:auto; top:auto;border:0; border-radius:0; width:auto !important;  float:none; background-color:transparent; box-shadow:none; overflow:hidden;}
-  .nav .dropdown-menu > li { float:left; text-align:left; padding:0 110px 0 0; margin:20px 0;}
+  .nav .dropdown-menu { position:relative; max-width:1100px; padding: 0 15px; padding: 0; margin:auto; display:block; left:auto; top:auto;border:0; border-radius:0; width:auto !important;  float:none; background-color:transparent; box-shadow:none; overflow:hidden;}
+  .nav .dropdown-menu > li { float:left; text-align:left; padding:0 0 0 0; width: 25%; margin:20px 0;}
   .nav .dropdown-menu a { color:inherit !important; position:relative; padding:0 0 0 56px; background-color:transparent !important;}
   .nav .dropdown-menu a span,
   .nav .dropdown-menu a em { opacity:.6;}
@@ -266,6 +271,11 @@ html,body { height:100%;}
   .nav .icon-app { background-image:url(//data.iresearch.com.cn/images/icon-app.png);}
   .nav .icon-pc { background-image:url(//data.iresearch.com.cn/images/icon-pc.png);}
   .nav .icon-video { background-image:url(//data.iresearch.com.cn/images/icon-video.png);}
+  .nav .icon-device { background-image:url(//data.iresearch.com.cn/images/icon-device.png);}
+  .nav .icon-ad { background-image:url(//data.iresearch.com.cn/images/icon-ad.png);}
+
+
+
   .nav .icon-iRView-1 { background-image:url(//data.iresearch.com.cn/images/icon-xMediaPlanner.png);}
   .nav .icon-iRView-2 { background-image:url(//data.iresearch.com.cn/images/icon-mVideoTracker.png);}
   .nav .icon-iRView-3 { background-image:url(//data.iresearch.com.cn/images/icon-oVideoTracker.png);}
@@ -275,6 +285,7 @@ html,body { height:100%;}
 
   .nav .icon-iRView-7 { background-image:url(//data.iresearch.com.cn/images/icon-UserTracker.png);}
   .nav .icon-iRView-8 { background-image:url(//data.iresearch.com.cn/images/icon-ADTracker.png);}
+  .nav .icon-iRView-9 { background-image:url(//data.iresearch.com.cn/images/icon-ECTracker.png); background-position: 40% 50%;}
 
 
   .nav > li:nth-child(2) .dropdown-menu > li:last-child { display:block;}
@@ -316,7 +327,7 @@ html,body { height:100%;}
 
   }
   .collapse .nav {  background-color:#39434d; padding:80px 15px 0; position:absolute; top:0; bottom:0; width:100%; margin:auto; overflow-y:auto}
-  .collapse .nav > li > a {  text-align:left !important; padding-left:56px;}
+  .collapse .nav > li > a {  text-align:left !important; padding-left:36px;}
   .collapse .nav a { color:#a1a8ae !important;}
   .collapse.open { box-shadow:0 0 10px rgba(0,0,0,.5);
     -o-transform:translate3d(0,0,0);
@@ -331,10 +342,10 @@ html,body { height:100%;}
   .nav .dropdown-menu-box { display:none;}
   .nav .active.dropdown .dropdown-menu-box { display:block;}
   .nav .dropdown-menu { display:block; position:relative; background-color:transparent; padding:0; width:auto; float:none; box-shadow:none; border:0; margin:0px -15px 0; z-index:10; top:-2px;  background-color:#39434d;}
-  .nav .dropdown-menu a { padding:15px 0 15px 76px; color:#e2e2e2 !important;}
+  .nav .dropdown-menu a { padding:15px 0 15px 56px; color:#e2e2e2 !important;}
   .nav .dropdown-menu>li>a:focus,.nav .dropdown-menu>li>a:hover {  background-color:transparent !important; }
   .dropdown-menu>.active>a, .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover {  background-color:#363f49 !important;}
-  .nav em { display:none !important;}
+  .nav li a em { display:none !important;}
 
   .nav .dropdown-toggle { position:relative;}
   .nav .dropdown:before { content:''; position:absolute; top:0; width:65px; height:50px; right:-15px; margin:auto; z-index:51;}
