--- a/public/css/wechat2.css
+++ b/public/css/wechat2.css
@@ -1,10 +1,13 @@
 body {
     font-family: PingFangSC-Light, HanHei SC, Helvetica Neue, Helvetica, STHeitiSC-Light, Arial, Microsoft YaHei, sans-serif;
 }
+.impowerBox{
+    text-align:center !important;
+    postion:absolute;
+}
 
 .impowerBox .qrcode {
-    width: 170px;
-    margin-top: 40px;
+    width: 220px;
 }
 
 .impowerBox .title {
@@ -17,6 +20,9 @@ body {
 
 .status_icon {
     /*display: none;*/
+}
+#wx_default_tip {
+    margin-bottom: 20px;
 }
 
 .impowerBox .status {
